[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/playerShip3_green.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/ShootPlayer.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 45.0111

[node name="Player" type="KinematicBody2D"]
z_index = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
